# media-codec-interface

./: CMakeLists.txt
src/: CMakeLists.txt  media-codec-interface.pc.in  video_decoder_api.cpp  video_decoder_api.h  video_encoder_api.cpp  video_encoder_api.h
src/api/: CMakeLists.txt  video_decoder_api.cpp  video_decoder_api.h  video_encoder_api.cpp  video_encoder_api.h
src/base/: codec_types.cpp  codec_types.h  decoder_types.cpp  decoder_types.h  encoder_types.cpp  encoder_types.h  fourcc.cpp  fourcc.h  fourcc_value.cpp  fourcc_value.h  log.cpp  log.h  optional.h  ref_counted.h  scoped_refptr.h  thread.cpp  thread.h  types.h  vdec_resource_handler.cpp  vdec_resource_handler.h  video_buffers.cpp  video_buffers.h  video_decoder.cpp  video_decoder.h  video_decoder_client.h  video_decoder_delegate.h  video_encoder.cpp  video_encoder.h  video_encoder_client.h  video_encoder_delegate.h  video_frame.cpp  video_frame.h
src/impl/: CMakeLists.txt  video_decoder.cpp  video_encoder.cpp
src/impl/gst/: CMakeLists.txt  gst_video_encoder.cpp  gst_video_encoder.h
src/impl/gst/gst_wrapper/: buffer_encoder_wrapper.cpp  buffer_encoder_wrapper.h
src/impl/v4l2/: CMakeLists.txt  generic_v4l2_device.cpp  generic_v4l2_device.h  v4l2_buffers.cpp  v4l2_buffers.h  v4l2_device.cpp  v4l2_device.h  v4l2_queue.cpp  v4l2_queue.h  v4l2_utils.h  v4l2_video_decoder.cpp  v4l2_video_decoder.h  v4l2_video_encoder.cpp  v4l2_video_encoder.h
src/resource/: requestor.cpp  requestor.h  video_resource.cpp  video_resource.h
src/resource/resource_wrapper/: resource_calculator_type_converter.cpp  resource_calculator_type_converter.h  resource_calculator_wrapper.cpp  resource_calculator_wrapper.h  resource_manager_client_wrapper.cpp  resource_manager_client_wrapper.h
src/resource/resource_wrapper/stdlibcpp/: buffer_encoder_lib.cpp  buffer_encoder_lib.h  buffer_encoder_lib_impl.cpp  buffer_encoder_lib_impl.h  res_calculator.cpp  res_calculator.h  resource_manager_client.cpp  resource_manager_client.h  resource_manager_client_impl.cpp  resource_manager_client_impl.h
src/resourcefacilitator/: parser.cpp  parser.h  requestor.cpp  requestor.h
